--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,11 @@ body {
     background-color: #222222; 
 }
 
-body, .quote-input { 
+body { 
     font-family: 'Cascade Mono', 'Courier'; 
-    opacity: .6; 
-    color: whitesmoke; 
     font-size: 20px; 
+    color: grey; 
+    opacity: 0.5; 
 }
 
 .container { 
@@ -29,27 +29,62 @@ body, .quote-input {
     top: 3rem; 
     font-size: 2rem; 
     opacity: .6;  
-    color: grey; 
+    color: lightcoral; 
 }
 
 .quote-display { 
     margin-bottom: 1rem; 
-    color: #FFFFFF; 
-    opacity: .4; 
+    opacity: 0.1; 
+    color: white; 
+    margin-left: calc(1rem + 2px); 
+    margin-right: calc(1rem+2px);
 }
 
 .quote-input { 
     background-color: transparent; 
-    border: 2px solid #222222; 
+    border: 4px solid #222222; 
     outline: none; 
     width: 100%; 
     height: 5rem; 
     margin: auto; 
     resize: none; 
     padding: .5rem 1rem; 
+    font-size: 0rem; 
+    border-radius: .5rem; 
+    caret-color: transparent; 
 }
 
 .quote-input focus { 
     border-color: #FFFFFF; 
-    opacity: .4; 
+    opacity: .8; 
 }
+
+.correct { 
+    color: white; 
+}
+
+.incorrect{ 
+    color: red; 
+}
+
+.btn {
+    background-color: transparent; /* Blue background */
+    opacity: 0.7; 
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px; /* Set a font size */
+    cursor: pointer; /* Mouse pointer on hover */
+    border-radius: 2px; 
+    margin: auto;
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    animation-timing-function: ease-in;
+    background-color: coral;
+  }
+
+  .btn:active { 
+    background-color: #ff8f01; 
+  }
