--- a/styles.css
+++ b/styles.css
@@ -19,21 +19,21 @@ body {
 }
 
 .container { 
-    padding: 1rem; 
+    padding: 3rem; 
     width: 700px; 
-    max-width: 90%; 
+    max-width: 90%;
 }
 
 .timer { 
     position: absolute; 
     top: 3rem; 
-    font-size: 2rem; 
-    opacity: .6;  
-    color: lightcoral; 
+    font-size: 2rem;   
+    color: #4ffc91f6 ; 
 }
 
 .quote-display { 
-    margin-bottom: 1rem; 
+    margin-bottom: 3rem; 
+    margin-top: 3rem; 
     opacity: 0.1; 
     color: white; 
     margin-left: calc(1rem + 2px); 
@@ -42,6 +42,8 @@ body {
 
 .quote-input { 
     background-color: transparent; 
+    margin-top: 5rem; 
+    margin-bottom: 5rem; 
     border: 4px solid #222222; 
     outline: none; 
     width: 100%; 
@@ -49,27 +51,52 @@ body {
     margin: auto; 
     resize: none; 
     padding: .5rem 1rem; 
-    font-size: 0rem; 
+    font-size: 1rem; 
     border-radius: .5rem; 
+    font-family: 'Cascade Mono', 'Courier'; 
+    font-size: 20px; 
+    color: grey; 
+    opacity: 0.5; 
     caret-color: transparent; 
 }
 
 .quote-input focus { 
     border-color: #FFFFFF; 
+    margin-top: 5rem; 
+    margin-bottom: 5rem; 
     opacity: .8; 
+}
+
+@keyframes TransitioningBackground { 
+    0% { 
+        opacity: 0.3; 
+    }
+    20% { 
+        opacity: 0.5;
+    }
+    50% { 
+        opacity: 0.7; 
+    }
+    100% { 
+        opacity: 0.9;
+    }
 }
 
 .correct { 
     color: white; 
+    animation: TransitionBackground 0.3s ease;
+    transition: 0.3s;
 }
 
 .incorrect{ 
     color: red; 
+    animation: TransitionBackground 0.3s ease;
+    transition: 0.3s;
 }
 
 .btn {
     background-color: transparent; /* Blue background */
-    opacity: 0.7; 
+    opacity: 0.9; 
     border: none; /* Remove borders */
     color: white; /* White text */
     padding: 12px 16px; /* Some padding */
@@ -77,14 +104,15 @@ body {
     cursor: pointer; /* Mouse pointer on hover */
     border-radius: 2px; 
     margin: auto;
+
+    overflow: hidden; 
   }
   
   /* Darker background on mouse-over */
+
   .btn:hover {
     animation-timing-function: ease-in;
-    background-color: coral;
-  }
-
-  .btn:active { 
-    background-color: #ff8f01; 
+    background-color: #4ffc91f6;
+    animation: TransitioningBackground 0.6s ease;
+    transition: 0.6s;
   }
