--- a/QuoteTyper.css
+++ b/QuoteTyper.css
@@ -12,7 +12,7 @@ body {
 }
 
 body { 
-    font-family: 'Cascade Mono', 'Courier'; 
+    font-family: 'Courier'; 
     font-size: 20px; 
     color: grey; 
     opacity: 0.5; 
@@ -26,9 +26,9 @@ body {
 
 .timer { 
     position: absolute; 
-    top: 3rem; 
-    font-size: 2rem;   
-    color: #4ffc91f6 ; 
+    font-size: 1.7rem;   
+    color: rgba(240, 248, 255, 0.466); 
+    padding-left: 3rem;
 }
 
 .quote-display { 
@@ -55,13 +55,12 @@ body {
     border-radius: .5rem; 
     font-family: 'Cascade Mono', 'Courier'; 
     font-size: 20px; 
-    color: grey; 
-    opacity: 0.5; 
-    caret-color: transparent; 
+    color: #4ffc91f6;
+    opacity: 0.3; 
+    caret-color: #4ffc91f6; 
 }
 
 .quote-input focus { 
-    border-color: #FFFFFF; 
     margin-top: 5rem; 
     margin-bottom: 5rem; 
     opacity: .8; 
@@ -90,18 +89,21 @@ body {
 
 .incorrect{ 
     color: red; 
-    animation: TransitionBackground 0.3s ease;
-    transition: 0.3s;
+    padding-bottom: 0.2px;
+    border-width: thin;
+    border-bottom-style: solid; 
+    animation: TransitionBackground 0.1s ease;
+    transition: 0.2s;
 }
 
 .btn {
-    background-color: transparent; /* Blue background */
+    background-color: transparent; 
     opacity: 0.9; 
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
-    font-size: 16px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
+    border: none; 
+    color: white; 
+    padding: 12px 16px; 
+    font-size: 16px; 
+    cursor: pointer; 
     border-radius: 2px; 
     margin: auto;
 
@@ -116,3 +118,4 @@ body {
     animation: TransitioningBackground 0.6s ease;
     transition: 0.6s;
   }
+
